--- a/Tutorial-GiRaFFE_HO_C_code_library-A2B.ipynb
+++ b/Tutorial-GiRaFFE_HO_C_code_library-A2B.ipynb
@@ -33,7 +33,7 @@
     "1. [Step 1](#headers): Creating the header files\n",
     "    1. [Step 1.a](#outermost): Handling the outermost ghostzones\n",
     "1. [Step 2](#C_code): C code\n",
-    "    1. [Step 2.a](#AtoB): Deciding which header file to use\n",
+    "    1. [Step 2.a](#a2b): Deciding which header file to use\n",
     "    1. [Step 2.b](#driver): Looping over all ghostzones"
    ]
   },
@@ -43,8 +43,7 @@
    "source": [
     "<a id='headers'></a>\n",
     "\n",
-    "## Creating the header files\n",
-    "\\[Back to [top](#toc)\\]\n",
+    "## Step 1: Creating the header files \\[Back to [top](#toc)\\]\n",
     "$$\\label{headers}$$\n",
     "\n",
     "We start in the usual way - import the modules we need, set `DIM = 3`, and run the function `gho.GiRaFFE_Higher_Order_v2()` to build equations. We will also import the Levi-Civita symbol from `WeylScalars_Cartesian`. "
@@ -166,8 +165,7 @@
    "source": [
     "<a id='outermost'></a>\n",
     "\n",
-    "### Handling the outermost ghostzones\n",
-    "\\[Back to [top](#toc)\\]\n",
+    "### Step 1.a: Handling the outermost ghostzones \\[Back to [top](#toc)\\]\n",
     "$$\\label{outermost}$$\n",
     "\n",
     "Finally, we will write the files that will handle the outermost ghost zones. Each of these ghost zones represents one face of a cube. Since there is no data outside the cube, we will use an up- or downwinded derivative so that we use only interior data. For example, on the +x ghost zone, we will use a downwinded derivative in the x-direction. So, we will need to create a total of six files:"
@@ -267,8 +265,7 @@
    "source": [
     "<a id='C_code'></a>\n",
     "\n",
-    "## C code\n",
-    "\\[Back to [top](#toc)\\]\n",
+    "## Step 2: C code \\[Back to [top](#toc)\\]\n",
     "$$\\label{C_code}$$\n",
     "\n",
     "With the header files created to actually calculate $B^i$ from $A_k$, we will write the C code to direct how those are used. We will start by including needed header files. We will then define `REAL` as type `double` (so that we can easily change it everywhere if we want to use a different precision) and the `IDX` macros that we use to access specific points in the gridfunction arrays. "
@@ -315,11 +312,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='AtoB'></a>\n",
+    "<a id='a2b'></a>\n",
     "\n",
-    "### Deciding which header file to use\n",
-    "\\[Back to [top](#toc)\\]\n",
-    "$$\\label{AtoB}$$\n",
+    "### Step 2.a: Deciding which header file to use \\[Back to [top](#toc)\\]\n",
+    "$$\\label{a2b}$$\n",
     "\n",
     "The rest of this file will consist of two functions. The first, `AtoB`, will loop over the region specified by `i0min`, `i0max`, `i1min`, `i1max`, `i2min`, and `i2max`. At each point therein, it will calculate $B^i$ at the specified order. Note that if `ORDER = 0` is passed to this function, it will instead use second-order derivatives along with up- or downwinded derivatives as appropriate, which is specified by the parameters `FACEX0`, `FACEX1`, and `FACEX2`."
    ]
@@ -420,8 +416,7 @@
    "source": [
     "<a id='driver'></a>\n",
     "\n",
-    "### Looping over all ghostzones\n",
-    "\\[Back to [top](#toc)\\]\n",
+    "### Step 2.b: Looping over all ghostzones \\[Back to [top](#toc)\\]\n",
     "$$\\label{driver}$$\n",
     "\n",
     "This function is responsible for driving the logic needed to compute $B^i$ from $A_i$ whenever it is needed in the main code (typically done along with applying BCs after a timestep in the main code). We first calculate the order that we want on the interior of the grid from the parameter `NGHOSTS`. We set the boundaries `imin` and `imax` such that they define the interior of the grid. We also poison the values of $B^i$ by setting them to `NaN` everywhere: this will allow us to immediately tell if something is causing us to skip a point in the rest of the algorithm. \n",
