--- a/Tutorial-GiRaFFE_HO_C_code_library-C2P_P2C.ipynb
+++ b/Tutorial-GiRaFFE_HO_C_code_library-C2P_P2C.ipynb
@@ -13,9 +13,9 @@
     "## Introduction\n",
     "$$\\label{intro}$$\n",
     "\n",
-    "This writes and documents the C code that `GiRaFFE_HO` uses in order to update the Valencia 3-velocity at each timestep. It also computes corrections the the densitized Poynting flux in order to keep the physical quantities from violating the GRFFE constraints. \n",
+    "This writes and documents the C code that `GiRaFFE_HO` uses in order to update the Valencia 3-velocity at each timestep. It also computes corrections to the densitized Poynting flux in order to keep the physical quantities from violating the GRFFE constraints. \n",
     "\n",
-    "These algorithms are adapted from the original `GiRaFFE` code, based on the description in [arXiv:1310.3274v2](https://arxiv.org/pdf/1310.3274v2.pdf). They have been modified to work with the NRPy+ infrastructure instead of the Einstein Toolkit. They have also been modified to use the Valencia 3-velocity instead of the drift velocity."
+    "These algorithms are adapted from the original `GiRaFFE` code (see [arxiv:1704.00599v2](https://arxiv.org/abs/1704.00599v2)), based on the description in [arXiv:1310.3274v2](https://arxiv.org/pdf/1310.3274v2.pdf). They have been modified to work with the NRPy+ infrastructure instead of the Einstein Toolkit. They have also been modified to use the Valencia 3-velocity instead of the drift velocity."
    ]
   },
   {
@@ -30,7 +30,7 @@
     "This module is organized as follows\n",
     "\n",
     "1. [Step 1](#c2p): The conservative-to-primitive solver\n",
-    "    1. [Step 1.a](#ortho_S_B): Enforce the orthogonality of $\\tilde{S}_i$ and $B^i$\n",
+    "    1. [Step 1.a](#ortho_s_b): Enforce the orthogonality of $\\tilde{S}_i$ and $B^i$\n",
     "    1. [Step 1.b](#vel_cap): Rescale ${\\tilde S}_i$ to limit the Lorentz factor and enforce the velocity cap\n",
     "    1. [Step 1.c](#update_vel): Recompute the velocities at the new timestep\n",
     "    1. [Step 1.d](#current_sheet): Enforce the Current Sheet prescription\n",
@@ -43,8 +43,7 @@
    "source": [
     "<a id='c2p'></a>\n",
     "\n",
-    "# Step 1: The conservative-to-primitive solver\n",
-    "\\[Back to [top](#toc)\\]\n",
+    "# Step 1: The conservative-to-primitive solver \\[Back to [top](#toc)\\]\n",
     "$$\\label{c2p}$$\n",
     "\n",
     "We start with the Conservative-to-Primitive solver. This function is called after the vector potential and Poynting vector have been evolved at a timestep and updates the velocities. The algorithm will be as follows: \n",
@@ -52,8 +51,8 @@
     "1. Enforce the orthogonality of ${\\tilde S}_i$ and $B^i$\n",
     "    * ${\\tilde S}_i \\rightarrow {\\tilde S}_i - ({\\tilde S}_j {\\tilde B}^j) {\\tilde B}_i/{\\tilde B}^2$\n",
     "2. Rescale ${\\tilde S}_i$ to limit the Lorentz factor and enforce the velocity cap\n",
-    "    * $f = \\sqrt{(1-\\gamma_{max}^{-2}){\\tilde B}^4/(16 \\pi^2 \\gamma {\\tilde S}^2)}$ \n",
-    "    * ${\\tilde S}_i \\rightarrow {\\tilde S}_i min(1,f)$\n",
+    "    * $f = \\sqrt{(1-\\gamma_{\\max}^{-2}){\\tilde B}^4/(16 \\pi^2 \\gamma {\\tilde S}^2)}$ \n",
+    "    * ${\\tilde S}_i \\rightarrow {\\tilde S}_i \\min(1,f)$\n",
     "3. Recompute the velocities at the new timestep\n",
     "    * $v^i = 4 \\pi \\gamma^{ij} {\\tilde S}_j \\gamma^{-1/2} B^{-2}$\n",
     "4. Enforce the Current Sheet prescription\n",
@@ -117,9 +116,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The next order of business will be to write the function definitions and some useful macros. First, we write a basic macro to find the minimum. We write the function definition of the Primitive-to-Conservative solver and include it from the next file we will write. (See below for more informaton). **TODO: Hyperlink** We define the standard indexing macros used in NRPy+ which map the values of each gridfunction at each point in three-dimensional space to a single one-dimensional array. \n",
+    "The next order of business will be to write the function definitions and some useful macros. First, we write a basic macro to find the minimum. We write the function definition of the Primitive-to-Conservative solver, `GiRaFFE_HO_compute_conservatives` and include it from the next file we will write [below](#p2c). We define the standard indexing macros used in NRPy+ that map the values of each gridfunction at each point in three-dimensional space to the elements of a single one-dimensional array. \n",
     "\n",
-    "Next, we write the function that calculates the metric determinant and inverse from the metric. The included header file `\"metric_quantities.h\"` does most of that work for us by looping over the entire grid and performing the matrix inverse operation. \n",
+    "Next, we write the function that calculates the metric determinant and inverse from the metric, `GiRaFFE_HO_update_metric_det_inverse()`. The included header file `\"metric_quantities.h\"` does most of that work for us by looping over the entire grid and performing the matrix inverse operation. \n",
     "\n",
     "Notice the use of the flag `-a` in the cell magic command below - this will append to the file instead of overwriting it."
    ]
@@ -211,9 +210,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we will read values in from memory. Note the `if` statement: this allows us to disable the evolution of gridfunctions inside of a certain radius, which is especially useful for neutron star simulations. \n",
+    "Next, we will read in values from memory. Note the `if` statement - this allows us to disable the evolution of gridfunctions inside of a specifiable radius, which is especially useful for neutron star simulations. \n",
     "\n",
-    "In addition to reading in values from memory, we also compute the densitized magnetic field $\\tilde{B}^i$ and the index-lowered form, $\\tilde{B}_i$"
+    "In addition to reading in values from memory, we also compute the densitized magnetic field $\\tilde{B}^i = B^i \\sqrt{\\gamma}$ and the index-lowered form, $\\tilde{B}_i = \\gamma_{ij} \\tilde{B}^j$."
    ]
   },
   {
@@ -294,11 +293,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='ortho_S_B'></a>\n",
+    "<a id='ortho_s_b'></a>\n",
     "\n",
-    "## Step 1.a: Enforce the orthogonality of $\\tilde{S}_i$ and $B^i$\n",
-    "\\[Back to [top](#toc)\\]\n",
-    "$$\\label{ortho_S_B}$$\n",
+    "## Step 1.a: Enforce the orthogonality of $\\tilde{S}_i$ and $B^i$ \\[Back to [top](#toc)\\]\n",
+    "$$\\label{ortho_s_b}$$\n",
     "\n",
     "Now, we will enforce the orthogonality of the magnetic field and densitized poynting flux: \n",
     "$${\\tilde S}_i \\rightarrow {\\tilde S}_i - ({\\tilde S}_j {\\tilde B}^j) {\\tilde B}_i/{\\tilde B}^2$$\n",
@@ -360,18 +358,20 @@
    "source": [
     "<a id='vel_cap'></a>\n",
     "\n",
-    "## Step 1.b: Rescale ${\\tilde S}_i$ to limit the Lorentz factor and enforce the velocity cap\n",
-    "\\[Back to [top](#toc)\\]\n",
+    "## Step 1.b: Rescale ${\\tilde S}_i$ to limit the Lorentz factor and enforce the velocity cap \\[Back to [top](#toc)\\]\n",
     "$$\\label{vel_cap}$$\n",
     "\n",
     "The next fix that we will apply limits the Lorentz factor. That is, we define the factor $f$ as \n",
-    "$$f = \\sqrt{(1-\\gamma_{\\rm max}^{-2}){\\tilde B}^4/(16 \\pi^2 \\gamma {\\tilde S}^2)}.$$\n",
+    "$$f = \\sqrt{(1-\\gamma_{\\max}^{-2}){\\tilde B}^4/(16 \\pi^2 \\gamma {\\tilde S}^2)}.$$\n",
+    "Note that $\\gamma_\\max$ here refers to the Lorentz factor, *not* the determinant of the metric.\n",
     "\n",
-    "If the magnitude of ${\\tilde S}_i$ exceeds $f$ (or if, as the code actually calculates, $\\tilde{S}^2 > f^2$), we rescale the components of ${\\tilde S}_i$ by $f$:\n",
+    "If $f<1$, (or if, as the code actually calculates, $\\tilde{S}^2 > f^2 \\tilde{S}^2$), we rescale the components of ${\\tilde S}_i$ by $f$. That is, if \n",
+    "$$\\tilde{S}^2 > (1-\\gamma_{\\max}^{-2}){\\tilde B}^4/(16 \\pi^2 \\gamma),$$ \n",
+    "we must then set\n",
     "$${\\tilde S}_i \\rightarrow {\\tilde S}_i \\min(1,f).$$\n",
     "\n",
-    "We then double check that the cap was effective by checking if $\\tilde{S}^2 > f^2$. \n",
-    "**TODO:** That doesn't actually look like what that code block does."
+    "We then double check that the cap was effective by checking if $\\tilde{S}^2 > f^2$ for large $\\gamma_\\max$ and error out if it wasn't. \n",
+    "**TODO:** Why do we check the case $\\gamma_\\max \\rightarrow \\infty$?"
    ]
   },
   {
@@ -429,13 +429,12 @@
    "source": [
     "<a id='update_vel'></a>\n",
     "\n",
-    "## Step 1.c: Recompute the velocities at the new timestep\n",
-    "\\[Back to [top](#toc)\\]\n",
+    "## Step 1.c: Recompute the velocities at the new timestep \\[Back to [top](#toc)\\]\n",
     "$$\\label{update_vel}$$\n",
     "\n",
     "Finally, we can calculate the velocities. In the source used, the equation to compute the drift velocity is given as \n",
     "$$v^i = 4 \\pi \\alpha \\gamma^{ij} {\\tilde S}_j \\gamma^{-1/2} B^{-2} - \\beta^i.$$\n",
-    "However, we wish to use the Valencia velocity instead. Since the Valencia velocity $\\bar{v}^i = \\frac{1}{\\alpha} \\left( v^i - \\beta^i \\right)$, we will code \n",
+    "However, we wish to use the Valencia velocity instead. Since the Valencia velocity $\\bar{v}^i = \\frac{1}{\\alpha} \\left( v^i + \\beta^i \\right)$, we will code \n",
     "$$\\bar{v}^i = 4 \\pi \\frac{\\gamma^{ij} {\\tilde S}_j}{\\sqrt{\\gamma} B^2}.$$\n"
    ]
   },
@@ -480,13 +479,12 @@
    "source": [
     "<a id='current_sheet'></a>\n",
     "\n",
-    "## Step 1.d: Enforce the Current Sheet prescription\n",
-    "\\[Back to [top](#toc)\\]\n",
+    "## Step 1.d: Enforce the Current Sheet prescription \\[Back to [top](#toc)\\]\n",
     "$$\\label{current_sheet}$$\n",
     "\n",
-    "Now, we seek to handle any current sheets (a physically important phenomenon) that might form. This algorithm will preserve an current sheets that form in the xy-plane by preventing our numerical scheme from dissipating them. After fixing the z-component of the velocity, we recompute the conservative variables to be consistent with the new velocities.\n",
+    "Now, we seek to handle any current sheets (a physically important phenomenon) that might form. This algorithm will preserve current sheets that form in the xy-plane by preventing our numerical scheme from dissipating them. After fixing the z-component of the velocity, we recompute the conservative variables to be consistent with the new velocities.\n",
     "\n",
-    "Thus, if we are within four gridpoints of $z=0$, **(Why is it 4.01?)** we set the component of the velocity perpendicular to the current sheet to zero by $n_i v^i = 0$, where $n_i = \\gamma_{ij} n^j$ is a unit normal to the current sheet and $n^j = \\delta^{jz} = (0\\ 0\\ 1)$. For drift velocity, this comes out to $$v^z = -\\frac{\\gamma_{xz} v^x + \\gamma_{yz} v^y}{\\gamma_{zz}}.$$ This reduces to $v^z = 0$ in flat space, as one would expect. **This should be checked for Valencia velocity.** The code also tracks the number of times this correction has been performed."
+    "Thus, if we are within four gridpoints **(Why is it 4.01?)** of $z=0$, we set the component of the velocity perpendicular to the current sheet to zero by $n_i v^i = 0$, where $n_i = \\gamma_{ij} n^j$ is a unit normal to the current sheet and $n^j = \\delta^{jz} = (0\\ 0\\ 1)$. For drift velocity, this means we just set $$v^z = -\\frac{\\gamma_{xz} v^x + \\gamma_{yz} v^y}{\\gamma_{zz}}.$$ This reduces to $v^z = 0$ in flat space, as one would expect. **This should be checked for Valencia velocity.** The code also tracks the number of times this correction has been performed."
    ]
   },
   {
@@ -580,8 +578,7 @@
    "source": [
     "<a id='p2c'></a>\n",
     "\n",
-    "# Step 2: The primitive-to-conservative solver\n",
-    "\\[Back to [top](#toc)\\]\n",
+    "# Step 2: The primitive-to-conservative solver \\[Back to [top](#toc)\\]\n",
     "$$\\label{p2c}$$\n",
     "\n",
     "This function is used to recompute the the conservatives $\\tilde{S}_i$ after the 3-velocity is changed as part of the current sheet prescription. It implements the same equation used to compute the initial Poynting flux from the initial velocity: $$\\tilde{S}_i = \\gamma_{ij} \\frac{v^j \\sqrt{\\gamma}B^2}{4 \\pi}$$ in terms of the Valencia 3-velocity. In the implementation here, we first calculate $B^2 = \\gamma_{ij} B^i B^j$, then $v_i = \\gamma_{ij} v^j$ before we calculate the equivalent expression $$\\tilde{S}_i = \\frac{v_j \\sqrt{\\gamma}B^2}{4 \\pi}.$$"
