--- a/Tutorial-GiRaFFE_HO_C_code_library-C2P_P2C.ipynb
+++ b/Tutorial-GiRaFFE_HO_C_code_library-C2P_P2C.ipynb
@@ -407,7 +407,7 @@
     "we must then set\n",
     "$${\\tilde S}_i \\rightarrow {\\tilde S}_i \\min(1,f).$$\n",
     "\n",
-    "We then double check that the cap was effective by checking if $\\tilde{S}^2 > f^2$ for large $\\gamma_\\max$ and error out if it wasn't. \n",
+    "We then double check that the cap was effective by checking if $\\tilde{S}^2 > f^2 \\tilde{S}^2$ for large $\\gamma_\\max$ and error out if it wasn't. \n",
     "**TODO:** Why do we check the case $\\gamma_\\max \\rightarrow \\infty$?"
    ]
   },
@@ -521,7 +521,7 @@
     "## Step 1.g: Enforce the Current Sheet prescription \\[Back to [top](#toc)\\]\n",
     "$$\\label{current_sheet}$$\n",
     "\n",
-    "Now, we seek to handle any current sheets (a physically important phenomenon) that might form. This algorithm will preserve current sheets that form in the xy-plane by preventing our numerical scheme from dissipating them. After fixing the z-component of the velocity, we recompute the conservative variables to be consistent with the new velocities.\n",
+    "Now, we seek to handle any current sheets (a physically important phenomenon) that might form. This algorithm will preserve current sheets that form in the xy-plane by preventing our numerical scheme from dissipating them. After fixing the z-component of the velocity, we recompute the conservative variables $\\tilde{S}_i$ to be consistent with the new velocities.\n",
     "\n",
     "Thus, if we are within four gridpoints **(Why is it 4.01?)** of $z=0$, we set the component of the velocity perpendicular to the current sheet to zero by $n_i v^i = 0$, where $n_i = \\gamma_{ij} n^j$ is a unit normal to the current sheet and $n^j = \\delta^{jz} = (0\\ 0\\ 1)$. For drift velocity, this means we just set $$v^z = -\\frac{\\gamma_{xz} v^x + \\gamma_{yz} v^y}{\\gamma_{zz}}.$$ This reduces to $v^z = 0$ in flat space, as one would expect. **This should be checked for Valencia velocity.** The code also tracks the number of times this correction has been performed."
    ]
